SSO authentication configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+idp.appId=123
+idp.entityId=https://sso.id.kent.ac.uk/idp
+idp.postLogoutURL=https://sso.id.kent.ac.uk/idp/saml2/idp/SingleLogoutService.php
+idp.metadataURL=https://sso.kent.ac.uk/
 
+server.port = 8443
+server.ssl.key-alias=Uproar
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=uproar123
