--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com'
 version = '0.0.1'
-sourceCompatibility = '11'
 
 configurations {
     developmentOnly
@@ -24,4 +23,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile("org.springframework.boot:spring-boot-starter-security")
 }
