--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8080
+spring.datasource.url=jdbc:h2:mem:uproar
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=uproar
+spring.datasource.password=uproar
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.main.allow-bean-definition-overriding=true
