sso working with GitHub

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port=8080
 spring.datasource.url=jdbc:h2:mem:uproar
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=uproar
 spring.datasource.password=uproar
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.main.allow-bean-definition-overriding=true
+spring.security.oauth2.client.registration.github.client-id=8273ab284853ce883b0a
+spring.security.oauth2.client.registration.github.client-secret=b1588b4b66d51545efe0b62ca03cc73428d3faf7
