--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.main.allow-bean-definition-overriding=true
 spring.security.oauth2.client.registration.github.client-id=8273ab284853ce883b0a
 spring.security.oauth2.client.registration.github.client-secret=b1588b4b66d51545efe0b62ca03cc73428d3faf7
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-alias=spring
+server.ssl.key-store=classpath:saml/keystore.jks
+server.ssl.key-store-password=secret
+security.saml2.metadata-url=https://dev-264209.okta.com/app/exk15undzswZUiFWe4x6/sso/saml/metadata
