--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ server.ssl.enabled=true
 server.ssl.key-alias=spring
 server.ssl.key-store=classpath:saml/keystore.jks
 server.ssl.key-store-password=secret
-security.saml2.metadata-url=https://dev-264209.okta.com/app/exk15undzswZUiFWe4x6/sso/saml/metadata
+security.saml2.metadata-url=https://sso.id.kent.ac.uk/idp/saml2/idp/metadata.php
