--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=uproar
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.main.allow-bean-definition-overriding=true
 server.port=8443
-server.ssl.enabled=true
-server.ssl.key-alias=spring
-server.ssl.key-store=classpath:saml/keystore.jks
-server.ssl.key-store-password=secret
+server.ssl.key-alias=tomcat
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=password
 security.saml2.metadata-url=https://sso.id.kent.ac.uk/idp/saml2/idp/metadata.php
