Better error message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=uproar
 spring.h2.console.path=/h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.main.allow-bean-definition-overriding=true
-## MULTIPART (MultipartProperties)
+## Upload properties
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
